# documentation-notes

./: .gitignore  .gitmodules  CloudServiceSummary.md  English.md  GA4.md  README.md  cfg  demo.txt  demo_env  diff.json  pyproject.toml
AI/: ADK.md  AI.md  AI_Agent.md  AI_CLAUDE.md  AiModel.md  LLM.md  MCP.md  PI-Agent.md  README.md  cli_acli.sh  cli_claude.sh  cli_codex.sh  cli_gemini.sh  cli_lms.sh  cli_ollama.sh  cli_pi.sh  cli_q.sh
Algorithms/: Algorithms.md
Android/: README.md
App/: Android.md
Containerize/: Infra.md  Terms.md  daemon.jsonc  docker-compose.md
DevOps/: Concept.md  Docker.md  GitLabCICD.md  Jenkins.md  SRE.md  Webhook.md  bazel.md  cli_containerd.sh  cli_podman.sh  containerd.md  podman.md
ELK/: ELK-Elasticsearch.md  ELK.md  Install.md
IM/: Slack-Webhook.md  Slack.md  cli_slack-slash.md  slack-app-mainfest.yaml
Kubernetes/: Helm.md  Kubernetes.md  README.md  Terms.md  bin_kube-apiserver.md  cli-helm.md  cli-kubectl.md  cli_crictl.sh  cli_ctr.sh  cli_eksctl.sh  cli_helm-pg.sh  cli_helm.md  cli_helm.sh  cli_kubeadm.sh  cli_kubectl-context.sh  cli_kubectl.md  cli_kubectl.sh  cli_kustomize.sh  cli_minikube.sh  cli_nerdctl.sh  helm-mq.md  installHelm.md  k8s_Operator.md  k8s_affinity.md  k8s_components.md  k8s_deployment.md  k8s_env.md  k8s_health_check.md  k8s_ingress.md  k8s_monitoring.md  k8s_node.md  k8s_pod.md  k8s_proxy.md  k8s_qos.md  k8s_resources.md  k8s_scheduling.md  k8s_secret.md  k8s_security.md  k8s_service.md  k8s_storage.md  (+4 more)
Monitoring/: Monitoring.md  MonitoringDashboard.md  OpenTelemetry.md  Prometheus.md
OS/: CPU.md  (+2 more)
(+1612 files in other folders)
