[tool.poetry]
name = "doc"
version = "0.1.0"
description = ""
authors = ["Tony Chou <cool21540125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^42.0.5"
flask = "^3.0.3"
pymongo = "^4.6.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.1.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
